--- a/src/app/share/components/header.component.html
+++ b/src/app/share/components/header.component.html
@@ -1,5 +1,5 @@
 <h1 class="logo"><img src="app/share/images/logo.png"></h1>
-<input type="search" name="search" #search class="search" md-maxlength="10" (keyup)="onSearchChange(search.value)">
+<input type="search" name="search" #search class="search" (keyup)="onSearchChange(search.value)">
 <nav>
   <ul>
     <li>
