--- a/src/app/variable.scss
+++ b/src/app/variable.scss
@@ -1,20 +1,33 @@
-$oa-search-bg: rgba(255, 255, 255, 0.4);
-$oa-dropdown-bg: #831D27;
-$oa-dropdown-list-bg: #A54E56;
-$oa-white: #ffffff;
-$oa-light-gray: #EAEAEA;
-$oa-gray: #cccccc;
-$oa-dark-gray: #b7b7b7;
-$oa-light-gray: #ddd;
-$oa-drak-yellow: #FFFACD;
-$oa-text-editor-bg: #b2b2b2;
-$oa-color_1: #ffffff;
-$oa-color_2: #8AC249;
-$oa-color_3: #000;
-$oa-color_4: rgba(0, 0, 0, 0.54);
-$oa-formcontrol-bg: rgba(255, 255, 255, 0.4);
-$oa-date-bg: #AAA;
-$oa-black: #000;
-$oa-datebutton: #f36523;
-$oa-datebutton-bg: #FAFAFA;
-$oa-caltable-bg: #003366;
+$oa-default-transparent: rgba(255, 255, 255, 0.4);
+$oa-default-color-1: #831D27;
+$oa-default-color-2: #A54E56;
+$oa-default-color-3: #ffffff;
+$oa-default-color-4: #EAEAEA;
+$oa-default-color-5: #cccccc;
+$oa-default-color-6: #b7b7b7;
+$oa-default-color-7: #DDDDDD;
+$oa-default-color-8: #FFFACD;
+$oa-default-color-9: #b2b2b2;
+$oa-default-color-10: #ffffff;
+$oa-default-color-11: #8AC249;
+$oa-default-color-12: #000000;
+$oa-default-color-13: rgba(0, 0, 0, 0.54);
+$oa-default-color-14: #AAAAAA;
+$oa-default-color-16: #f36523;
+$oa-default-color-17: #FAFAFA;
+$oa-default-color-18: #003366;
+$oa-default-color-19: #DADADA;
+$oa-default-color-20: #DADADA;
+$oa-default-color-21: #F2F2F2;
+$oa-default-color-22: #f16b4f;
+$oa-default-color-23: #fec61b;
+$oa-default-color-24: #88c24c;
+$oa-default-color-25: #78B1BA;
+$oa-default-color-26: #FBB03B;
+$oa-default-color-27: #ECECEC;
+$oa-default-color-28: #59B2A8;
+$oa-default-color-29: #57aed1;
+$oa-default-color-30: #e6e6e6;
+$oa-default-color-31: #444444;
+$oa-default-color-32: #99A3A5;
+$oa-default-color-33: #FBFBFB;
