--- a/src/app/inbox/item-views/inbox.component.scss
+++ b/src/app/inbox/item-views/inbox.component.scss
@@ -1,8 +1,8 @@
 @import "../../../app/variable.scss";
 
 .assign-order {
-  background:$oa-light-gray;
-  box-shadow: 1px 4px 6px $oa-gray;
+  background:$oa-default-color-4;
+  box-shadow: 1px 4px 6px $oa-default-color-5;
   padding: 0px 10px;
   display: inline-block;
   width: 100%;
@@ -21,7 +21,7 @@
   padding: 0px;
   cursor: pointer;
   &:hover {
-    backgroud:$oa-light-gray;
+    backgroud:$oa-default-color-4;
   }
 }
 .inbox-section {
@@ -43,7 +43,7 @@
 }
 .client-img{
   padding: 10px;
-  border:1px solid $oa-dark-gray;
+  border:1px solid $oa-default-color-6;
   margin:5px 10px 0px 10px;
   width: 30px;
   height: 30px;
@@ -91,7 +91,7 @@
   bottom: 0px;
   font-size: 11px;
   text-align: right;
-  background: $oa-drak-yellow;
+  background: $oa-default-color-8;
   margin: 0px;
 }
 .user-avtar {
@@ -113,7 +113,7 @@
 }
 .disabled {
   color: gray;
-  border: medium solid $oa-gray;
+  border: medium solid $oa-default-color-5;
 }
 .user-avtar {
   div {
@@ -169,11 +169,11 @@ audio::-webkit-media-controls-mute-button {
 }
 .reply-content {
   min-height:175px;
-  border:1px solid $oa-gray;
+  border:1px solid $oa-default-color-5;
   margin-top: 10px;
   padding: 10px;
   .text-editor {
-    background:$oa-text-editor-bg;
+    background:$oa-default-color-8;
     height: 29px
   }
   input {
