--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -2,7 +2,7 @@
   <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
   <div class="client-section" style="width:80px;float:left;">
     <span><img src="app/inbox/images/mobile-app.png"> </span>
-    <img [src]="'app/share/images/company-logo/'+order.customer.fromCompany + '.png'" class="md-avatar client-img" alt="{{order.customer.fromCompany}}"/>
+    <img [src]="'app/share/images/company-logo/'+order.customer.fromCompany + '.png'" class="client-img" alt="{{order.customer.fromCompany}}"/>
   </div>
   <div class="list-containt">
     <p *ngFor="let item of order.items">{{item.productId.name}}, {{item.productId.variant}}, {{item.qty}}</p>
@@ -11,7 +11,7 @@
   </div>
   <div class="user-right-section">
     <div class="user-avtar">
-      <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo.firstName + '.jpg'" class="md-avatar" alt="{{order.defaultTask.assignedTo}}"/>
+      <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo.firstName + '.jpg'" alt="{{order.defaultTask.assignedTo}}"/>
       <span flex> 25min </span>
     </div>
     <p class="delivery-date">Delivery by {{ order.orderDate | date }}</p>
