--- a/src/app/share/components/header.component.scss
+++ b/src/app/share/components/header.component.scss
@@ -3,9 +3,9 @@
 .search {
   height: 27px;
   margin: 3px;
-  background: $oa-search-bg;
+  background: $oa-default-transparent;
   border: 0px;
-  color: $oa-white;
+  color: $oa-default-color-3;
   font-size: 16px;
   padding: 0px 5px;
   width: 30%;
@@ -37,9 +37,11 @@ nav {
       img {
         width: 20px;
         height: 14px;
+        padding: 10px 2px;
+        float: left;
       }
       span {
-        color: $oa-white;
+        color: $oa-default-color-3;
         font-weight: normal;
       }
     }
@@ -54,6 +56,7 @@ nav {
           width: 27px;
           height: 27px;
           border-radius: 50%;
+          padding: 0px;
         }
       }
       &:hover {
@@ -67,7 +70,7 @@ nav {
     }
     .menu-dropdown {
       position: fixed;
-      background: $oa-dropdown-bg;
+      background: $oa-default-color-1;
       padding: 10px;
       z-index: 1;
       display: none;
@@ -82,7 +85,7 @@ nav {
           padding: 0px;
           text-align: left;
           display: block;
-          border-bottom: 1px solid $oa-dropdown-list-bg;
+          border-bottom: 1px solid $oa-default-color-2;
           width: 100%;
         }
       }
