--- a/src/app/share/components/login.component.html
+++ b/src/app/share/components/login.component.html
@@ -1,6 +1,6 @@
 <section class="low-padding login-section">
   <div class="row">
-    <div class="col-lg-6 col-md-8 col-sm-9 login-area">
+    <div class="login-area">
       <div id="account-settings">
         <form role="form"
               class="edit_user"
