--- a/src/app/share/components/login.component.scss
+++ b/src/app/share/components/login.component.scss
@@ -30,12 +30,12 @@
 .login-logo {
 	width: 194px;
 	float: left;
-	border-right: 1px solid $oa-white;
+	border-right: 1px solid $oa-default-color-3;
 	margin-right: 30px;
 	height: 180px;
 	label {
 		float: left;
-		color: $oa-white;
+		color: $oa-default-color-3;
 	}
 }
 .login-form {
@@ -45,50 +45,50 @@
     margin-top: 28px;
 	label {
 		float: left;
-		color: $oa-white;
+		color: $oa-default-color-3;
 	}
 	.form-control {
 		margin-bottom: 8px;
-		background: $oa-formcontrol-bg;
-		border: 0px solid $oa-formcontrol-bg;
+		background: $oa-default-transparent;
+		border: 0px solid $oa-default-transparent;
 		width: 100%;
 		height: 28px;
 		text-indent: 6px;
-		color: $oa-white;
+		color: $oa-default-color-3;
 	}
 	button {
 		margin-bottom: 8px;
-		background: $oa-formcontrol-bg;
-		border: 1px solid $oa-formcontrol-bg;
+		background: $oa-default-transparent;
+		border: 1px solid $oa-default-transparent;
 		width: 100%;
 		height: 32px;
 		margin-top: 10px;
-		color: $oa-white;
+		color: $oa-default-color-3;
 	}
 	a {
 		width: 100%;
 		display: inline-block;
 		text-align: right;
 		margin-top: 10px;
-		color: $oa-white;
+		color: $oa-default-color-3;
 	}
 }
 /*checkout bar css */
 .form-control::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: $oa-white;
+    color: $oa-default-color-3;
 }
 .form-control:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color: $oa-white;
+   color: $oa-default-color-3;
    opacity:  1;
 }
 .form-control::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color: $oa-white;
+   color: $oa-default-color-3;
    opacity:  1;
 }
 .form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color: $oa-white;
+   color: $oa-default-color-3;
 }
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px #99A3A5 inset;
+    -webkit-box-shadow: 0 0 0px 1000px $oa-default-color-32 inset;
     border: 0;
 }
