--- a/src/app/variable.scss
+++ b/src/app/variable.scss
@@ -31,3 +31,4 @@ $oa-default-color-30: #e6e6e6;
 $oa-default-color-31: #444444;
 $oa-default-color-32: #99A3A5;
 $oa-default-color-33: #FBFBFB;
+$oa-default-color-34: #7B9FA8;
