--- a/src/app/order/components/add-items.component.html
+++ b/src/app/order/components/add-items.component.html
@@ -58,9 +58,11 @@
       <div class="content-center add-item">
         <h3 layout-margin>{{item.amount}}&nbsp;</h3>
       </div>
-      <!-- <div class="content-center add-item">
-        <span (click)="removeSelectedItem(item)">X</span>
-      </div> -->
+      <div class="delete-row">
+        <span (click)="removeSelectedItem(item)">
+          <img src="./app/order/images/delete.svg" width="16" height="16">
+        </span>
+      </div>
 
       <div *ngIf="isVisibleProductArray[currentOrder.items.indexOf(item)]">
         <div *ngFor=" let innerItem of (items| productsFilter:'filterBy': search )"
@@ -82,7 +84,11 @@
         </div>
       </div>
     </div>
-    <div class="total-amount" *ngIf="currentOrder.items.length > 0">{{totalAmount}}</div>
+    <div class="total-amount" *ngIf="currentOrder.items.length > 0"> 
+      <label>
+        <img src="./app/order/images/grand-total.svg" width="16" height="16"> Grand Total </label>
+      <span>{{totalAmount}}</span>
+    </div>
 
     <div class="search-row">
       <div id="emptyRow">
@@ -107,7 +113,7 @@
            (keyup)="showProducts = true"
            md-maxlength="10"
            flex="40">-->
-    <div *ngIf="showProducts">
+    <div class="search-auto-suggestion" *ngIf="showProducts">
       <div *ngFor="let item of (items| productsFilter:'filterBy': search )"
            (click)="selectThisItem(item)"
            class="order-row-list">
