--- a/src/app/share/components/header.component.html
+++ b/src/app/share/components/header.component.html
@@ -15,7 +15,7 @@
       <span>Master</span>
       <div class="menu-dropdown">
         <ul>
-          <li><span>Products</span></li>
+          <li [routerLink]="['Inbox/Products']"><span>Products</span></li>
           <li><span>Customers</span></li>
         </ul>
       </div>
